@@ -2,17 +2,26 @@ package com.mealguide.mealguide_api.mealcrawl.application.service;
 
 import com.mealguide.mealguide_api.mealcrawl.application.dto.CurrentUserMealPreference;
 import com.mealguide.mealguide_api.mealcrawl.application.dto.MealMenuIngredientRow;
+import com.mealguide.mealguide_api.mealcrawl.application.dto.MealMenuAllergyRow;
+import com.mealguide.mealguide_api.mealcrawl.application.dto.ReligionIngredientMapCachePayload;
+import com.mealguide.mealguide_api.mealcrawl.application.dto.ReligionIngredientMappingRow;
 import com.mealguide.mealguide_api.mealcrawl.application.dto.RestrictionIngredientRow;
 import com.mealguide.mealguide_api.mealcrawl.application.dto.WeeklyMealCachePayload;
+import com.mealguide.mealguide_api.mealcrawl.application.dto.WeeklyMealI18nCachePayload;
+import com.mealguide.mealguide_api.mealcrawl.application.dto.WeeklyMealRiskDataCachePayload;
 import com.mealguide.mealguide_api.mealcrawl.application.port.MealCrawlPersistencePort;
+import com.mealguide.mealguide_api.mealcrawl.application.port.MenuReadCachePort;
 import com.mealguide.mealguide_api.mealcrawl.domain.MenuRiskLevel;
+import com.mealguide.mealguide_api.mealcrawl.infrastructure.config.MealCrawlProperties;
 import com.mealguide.mealguide_api.mealcrawl.presentation.dto.response.WeeklyMealResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -27,8 +36,12 @@ public class WeeklyMealResponseAssembler {
 
     private static final String DEFAULT_LANGUAGE_CODE = "ko";
     private static final BigDecimal MATCHED_CONFIDENCE = BigDecimal.ONE;
+    private static final String SOURCE_CONFIRMED = "CONFIRMED";
+    private static final String SOURCE_AI = "AI";
 
     private final MealCrawlPersistencePort mealCrawlPersistencePort;
+    private final MenuReadCachePort menuReadCachePort;
+    private final MealCrawlProperties mealCrawlProperties;
     private final RiskLevelPolicyResolver riskLevelPolicyResolver;
 
     public WeeklyMealResponse assemble(WeeklyMealCachePayload payload, CurrentUserMealPreference preference) {
@@ -43,27 +56,19 @@ public class WeeklyMealResponseAssembler {
     ) {
         Set<Long> mealMenuIds = extractMealMenuIds(payload);
         if (mealMenuIds.isEmpty()) {
-            return toWeeklyMealResponse(payload, translatedMenuNames, Map.of());
+            return toWeeklyMealResponse(payload, translatedMenuNames, Collections.emptyMap());
         }
 
-        Map<Long, List<MealMenuIngredientRow>> confirmedByMealMenuId = groupByMealMenuId(
-                mealCrawlPersistencePort.findConfirmedIngredientsByMealMenuIds(mealMenuIds)
-        );
+        WeeklyMealRiskDataCachePayload riskData = loadWeeklyRiskData(payload, mealMenuIds);
+        Map<Long, List<MealMenuIngredientRow>> confirmedByMealMenuId = toIngredientRows(riskData, SOURCE_CONFIRMED);
         Set<Long> confirmedMealMenuIds = confirmedByMealMenuId.keySet();
-
-        Set<Long> remainingMealMenuIds = new HashSet<>(mealMenuIds);
-        remainingMealMenuIds.removeAll(confirmedMealMenuIds);
-        Map<Long, List<MealMenuIngredientRow>> aiByMealMenuId = groupByMealMenuId(
-                mealCrawlPersistencePort.findAiIngredientsByMealMenuIds(remainingMealMenuIds)
-        );
+        Map<Long, List<MealMenuIngredientRow>> aiByMealMenuId = toIngredientRows(riskData, SOURCE_AI);
         Set<Long> aiMealMenuIds = aiByMealMenuId.keySet();
 
-        Set<Long> mealMenuIdsWithAllergyRisk = mealCrawlPersistencePort.findMealMenuIdsHavingMatchedAllergies(
-                preference.userId(),
-                mealMenuIds
-        );
+        Set<Long> mealMenuIdsWithAllergyRisk = findMealMenuIdsWithAllergyRisk(riskData, preference.allergyCodes());
+        Set<String> weeklyIngredientCodes = extractIngredientCodes(riskData);
         Map<String, List<RestrictionIngredientRow>> religionIngredientIndex = indexRestrictionIngredientsByIngredientCode(
-                mealCrawlPersistencePort.findReligiousRestrictionIngredients(preference.religiousCodes())
+                findReligiousRestrictionIngredients(preference.religiousCodes(), weeklyIngredientCodes)
         );
 
         Map<Long, WeeklyMealResponse.MenuRiskResponse> riskByMealMenuId = new HashMap<>();
@@ -91,7 +96,7 @@ public class WeeklyMealResponseAssembler {
 
     public Map<Long, String> resolveTranslatedMenuNames(WeeklyMealCachePayload payload, String languageCode) {
         Set<Long> mealMenuIds = extractMealMenuIds(payload);
-        return loadTranslatedMenuNames(mealMenuIds, languageCode);
+        return loadTranslatedMenuNames(payload, mealMenuIds, languageCode);
     }
 
     private Set<Long> extractMealMenuIds(WeeklyMealCachePayload payload) {
@@ -184,15 +189,12 @@ public class WeeklyMealResponseAssembler {
                         schedule.menus().stream()
                                 .map(menu -> new WeeklyMealResponse.MenuResponse(
                                         menu.mealMenuId(),
-                                        translatedMenuNamesByMealMenuId.getOrDefault(menu.mealMenuId(), menu.menuName()),
+                                        resolveMenuName(translatedMenuNamesByMealMenuId, menu),
                                         menu.cornerName(),
                                         menu.displayOrder(),
                                         menu.spicyLevel(),
                                         menu.aiAnalyzed(),
-                                        riskByMealMenuId.getOrDefault(
-                                                menu.mealMenuId(),
-                                                new WeeklyMealResponse.MenuRiskResponse(MenuRiskLevel.UNKNOWN.name())
-                                        )
+                                        resolveMenuRisk(riskByMealMenuId, menu.mealMenuId())
                                 ))
                                 .toList()
                 ))
@@ -207,7 +209,26 @@ public class WeeklyMealResponseAssembler {
         );
     }
 
-    private Map<Long, String> loadTranslatedMenuNames(Set<Long> mealMenuIds, String languageCode) {
+    private String resolveMenuName(Map<Long, String> translatedMenuNamesByMealMenuId, WeeklyMealCachePayload.MenuItem menu) {
+        if (menu.mealMenuId() == null || translatedMenuNamesByMealMenuId == null) {
+            return menu.menuName();
+        }
+        return translatedMenuNamesByMealMenuId.getOrDefault(menu.mealMenuId(), menu.menuName());
+    }
+
+    private WeeklyMealResponse.MenuRiskResponse resolveMenuRisk(
+            Map<Long, WeeklyMealResponse.MenuRiskResponse> riskByMealMenuId,
+            Long mealMenuId
+    ) {
+        WeeklyMealResponse.MenuRiskResponse unknownRisk =
+                new WeeklyMealResponse.MenuRiskResponse(MenuRiskLevel.UNKNOWN.name());
+        if (mealMenuId == null || riskByMealMenuId == null) {
+            return unknownRisk;
+        }
+        return riskByMealMenuId.getOrDefault(mealMenuId, unknownRisk);
+    }
+
+    private Map<Long, String> loadTranslatedMenuNames(WeeklyMealCachePayload payload, Set<Long> mealMenuIds, String languageCode) {
         if (mealMenuIds == null || mealMenuIds.isEmpty()) {
             return Map.of();
         }
@@ -218,6 +239,159 @@ public class WeeklyMealResponseAssembler {
         if (DEFAULT_LANGUAGE_CODE.equals(normalizedLanguageCode)) {
             return Map.of();
         }
-        return mealCrawlPersistencePort.findTranslatedMenuNamesByMealMenuIds(mealMenuIds, normalizedLanguageCode);
+        return menuReadCachePort.findWeeklyMealI18n(payload.cafeteriaId(), payload.weekStartDate(), normalizedLanguageCode)
+                .map(WeeklyMealI18nCachePayload::menuNamesByMealMenuId)
+                .orElseGet(() -> {
+                    Map<Long, String> names = mealCrawlPersistencePort.findTranslatedMenuNamesByMealMenuIds(mealMenuIds, normalizedLanguageCode);
+                    if (names == null) {
+                        names = Map.of();
+                    }
+                    menuReadCachePort.upsertWeeklyMealI18n(
+                            payload.cafeteriaId(),
+                            payload.weekStartDate(),
+                            normalizedLanguageCode,
+                            new WeeklyMealI18nCachePayload(names),
+                            readCacheTtl()
+                    );
+                    return names;
+                });
+    }
+
+    private WeeklyMealRiskDataCachePayload loadWeeklyRiskData(WeeklyMealCachePayload payload, Set<Long> mealMenuIds) {
+        return menuReadCachePort.findWeeklyMealRiskData(payload.cafeteriaId(), payload.weekStartDate())
+                .orElseGet(() -> {
+                    WeeklyMealRiskDataCachePayload loaded = loadWeeklyRiskDataFromDb(mealMenuIds);
+                    menuReadCachePort.upsertWeeklyMealRiskData(payload.cafeteriaId(), payload.weekStartDate(), loaded, readCacheTtl());
+                    return loaded;
+                });
+    }
+
+    private WeeklyMealRiskDataCachePayload loadWeeklyRiskDataFromDb(Set<Long> mealMenuIds) {
+        Map<Long, List<MealMenuIngredientRow>> confirmedByMealMenuId = groupByMealMenuId(
+                listOrEmpty(mealCrawlPersistencePort.findConfirmedIngredientsByMealMenuIds(mealMenuIds))
+        );
+        Set<Long> remainingMealMenuIds = new HashSet<>(mealMenuIds);
+        remainingMealMenuIds.removeAll(confirmedByMealMenuId.keySet());
+        Map<Long, List<MealMenuIngredientRow>> aiByMealMenuId = groupByMealMenuId(
+                listOrEmpty(mealCrawlPersistencePort.findAiIngredientsByMealMenuIds(remainingMealMenuIds))
+        );
+        List<MealMenuAllergyRow> allergyRows = listOrEmpty(
+                mealCrawlPersistencePort.findAllergiesByMealMenuIds(mealMenuIds, DEFAULT_LANGUAGE_CODE)
+        );
+
+        Map<Long, WeeklyMealRiskDataCachePayload.IngredientData> ingredients = new HashMap<>();
+        confirmedByMealMenuId.forEach((mealMenuId, rows) -> ingredients.put(
+                mealMenuId,
+                new WeeklyMealRiskDataCachePayload.IngredientData(
+                        SOURCE_CONFIRMED,
+                        rows.stream().map(MealMenuIngredientRow::ingredientCode).toList()
+                )
+        ));
+        aiByMealMenuId.forEach((mealMenuId, rows) -> ingredients.put(
+                mealMenuId,
+                new WeeklyMealRiskDataCachePayload.IngredientData(
+                        SOURCE_AI,
+                        rows.stream().map(MealMenuIngredientRow::ingredientCode).toList()
+                )
+        ));
+
+        Map<Long, List<WeeklyMealRiskDataCachePayload.AllergyData>> allergies = new HashMap<>();
+        for (MealMenuAllergyRow row : allergyRows) {
+            allergies.computeIfAbsent(row.mealMenuId(), unused -> new ArrayList<>())
+                    .add(new WeeklyMealRiskDataCachePayload.AllergyData(row.allergyCode(), row.confidence()));
+        }
+        return new WeeklyMealRiskDataCachePayload(ingredients, allergies);
+    }
+
+    private Map<Long, List<MealMenuIngredientRow>> toIngredientRows(WeeklyMealRiskDataCachePayload riskData, String source) {
+        Map<Long, List<MealMenuIngredientRow>> result = new HashMap<>();
+        if (riskData.ingredientsByMealMenuId() == null) {
+            return result;
+        }
+        riskData.ingredientsByMealMenuId().forEach((mealMenuId, data) -> {
+            if (data != null && source.equals(data.source())) {
+                List<MealMenuIngredientRow> rows = data.ingredientCodes() == null ? List.of() : data.ingredientCodes().stream()
+                        .map(code -> new MealMenuIngredientRow(mealMenuId, code, code))
+                        .toList();
+                result.put(mealMenuId, rows);
+            }
+        });
+        return result;
+    }
+
+    private Set<Long> findMealMenuIdsWithAllergyRisk(WeeklyMealRiskDataCachePayload riskData, List<String> userAllergyCodes) {
+        if (userAllergyCodes == null || userAllergyCodes.isEmpty() || riskData.allergiesByMealMenuId() == null) {
+            return Set.of();
+        }
+        Set<String> userAllergies = new HashSet<>(userAllergyCodes);
+        Set<Long> result = new HashSet<>();
+        riskData.allergiesByMealMenuId().forEach((mealMenuId, allergies) -> {
+            if (allergies != null && allergies.stream().anyMatch(allergy -> userAllergies.contains(allergy.allergyCode()))) {
+                result.add(mealMenuId);
+            }
+        });
+        return result;
+    }
+
+    private Set<String> extractIngredientCodes(WeeklyMealRiskDataCachePayload riskData) {
+        if (riskData.ingredientsByMealMenuId() == null || riskData.ingredientsByMealMenuId().isEmpty()) {
+            return Set.of();
+        }
+        Set<String> ingredientCodes = new HashSet<>();
+        for (WeeklyMealRiskDataCachePayload.IngredientData data : riskData.ingredientsByMealMenuId().values()) {
+            if (data != null && data.ingredientCodes() != null) {
+                ingredientCodes.addAll(data.ingredientCodes());
+            }
+        }
+        return ingredientCodes;
+    }
+
+    private List<RestrictionIngredientRow> findReligiousRestrictionIngredients(
+            List<String> religiousCodes,
+            Set<String> ingredientCodes
+    ) {
+        if (religiousCodes == null || religiousCodes.isEmpty() || ingredientCodes == null || ingredientCodes.isEmpty()) {
+            return List.of();
+        }
+        Set<String> selectedCodes = new HashSet<>(religiousCodes);
+        ReligionIngredientMapCachePayload religionMap = menuReadCachePort.findReligionIngredientMap()
+                .orElseGet(() -> {
+                    ReligionIngredientMapCachePayload loaded = loadReligionIngredientMapFromDb();
+                    menuReadCachePort.upsertReligionIngredientMap(loaded, readCacheTtl());
+                    return loaded;
+                });
+        List<RestrictionIngredientRow> rows = new ArrayList<>();
+        if (religionMap.restrictionsByIngredientCode() == null) {
+            return rows;
+        }
+        for (String ingredientCode : ingredientCodes) {
+            if (ingredientCode == null) {
+                continue;
+            }
+            List<ReligionIngredientMapCachePayload.RestrictionData> restrictions =
+                    religionMap.restrictionsByIngredientCode().getOrDefault(ingredientCode, List.of());
+            for (ReligionIngredientMapCachePayload.RestrictionData restriction : restrictions) {
+                if (selectedCodes.contains(restriction.restrictionCode())) {
+                    rows.add(new RestrictionIngredientRow(
+                            restriction.restrictionCode(),
+                            ingredientCode,
+                            ingredientCode
+                    ));
+                }
+            }
+        }
+        return rows;
+    }
+
+    private ReligionIngredientMapCachePayload loadReligionIngredientMapFromDb() {
+        return ReligionIngredientMapCachePayload.from(mealCrawlPersistencePort.findReligionIngredientMappings());
+    }
+
+    private Duration readCacheTtl() {
+        return Duration.ofSeconds(mealCrawlProperties.getReadCacheTtlSeconds());
+    }
+
+    private <T> List<T> listOrEmpty(List<T> values) {
+        return values == null ? List.of() : values;
     }
 }
